# mime

./: .ccls  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Makefile  README.md  README.org  _config.yml  base.chai  build.rs  concepts.md  index.md  myfile.chai  reference.md  ulysses.chai
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-test.yml  publish.yml  release.yml
c++/: .clang-format
c++/include/internal/: args.hh
c++/include/mime/: mime.hh
c++/src/cmd/: chai.cc  main.cc
c++/src/lib/: mime.cc  u32utils.cc
c++/unittests/: buffer_test.cc  chai_test.cc  except_test.cc  narrow_test.cc  u32utils_test.cc
docs/: CNAME  README.md  _config.yml  concepts.md  example.md  examples-csv-to-json.md  examples-multiple-cursors.md  examples-print-function-names.md  examples-regex.md  examples.md  getting-started.md  index.md  reference.md
docs/playground/: emscripten-pre.js  index.html  tailwind.config.js
examples/: gofunc.mime  main.go
include/internal/: except.hh
include/mime/: args.hh  chai.hh  mime.hh  u32utils.hh
mime-py/: Cargo.toml  mime-test.py  pyproject.toml
mime-py/.github/workflows/: CI.yml
mime-py/src/: lib.rs
mime-rs/: ffi.rs  lib.rs  text.rs  window.rs
playground/: tailwind.css
src/: buffer.cc  buffer.hh  buffer_test.cc  chai.cc  chai.hh  chai_init.cc  chai_init.hh  chai_test.cc  main.cc  main_test.cc  u32utils.cc  u32utils.hh  u32utils_test.cc
src/cmd/: args.cc  chai.cc  main.cc
src/lib/: mime.cc  u32utils.cc
testdata/: narrow_test_input.go  test.mime  unicode.csv
unittests/: args_test.cc  buffer_test.cc  chai_test.cc  except_test.cc  main_test.cc  narrow_test.cc  u32utils_test.cc
